[package]
name = "dkg-core"
version = "1.0.0"
authors = [
    "tony riemer <driemworks@idealabs.network>"
]
categories = ["cryptography"]
keywords = ["pairing", "threshold", "distributed-key-generator", "secret-sharing"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/driemworks/dkg"
description = "DKG PoC using arkworks."
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# for std serialization
serde = { version = "1.0.160", default-features = false, features = ["derive"], optional = true}
# for no-std serialization 
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
# for wasm build
serde-wasm-bindgen = { version = "0.4", default-features = false}
wasm-bindgen = { version = "0.2", default-features = false}

num-bigint = { version = "0.4.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false}
blake2 = { version = "0.10", default-features = false }
# arkworks dependencies
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["signature"] }

[features]
default = ["std"]
std = [
    "serde",
]
